--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -4,116 +4,14 @@
     <meta charset="UTF-8">
     <title>Sign Up</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-        html,
-        body {
-            height: 100%;
-        }
-
-        body {
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-align: center;
-            align-items: center;
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #f5f5f5;
-        }
-
-        .form-signup {
-            width: 100%;
-            max-width: 420px;
-            padding: 15px;
-            margin: auto;
-        }
-
-        .form-label-group {
-            position: relative;
-            margin-bottom: 1rem;
-        }
-
-        .form-label-group > input,
-        .form-label-group > label {
-            height: 3.125rem;
-            padding: .75rem;
-        }
-
-        .form-label-group > label {
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: block;
-            width: 100%;
-            margin-bottom: 0; /* Override default `<label>` margin */
-            line-height: 1.5;
-            color: #495057;
-            pointer-events: none;
-            cursor: text; /* Match the input under the label */
-            border: 1px solid transparent;
-            border-radius: .25rem;
-            transition: all .1s ease-in-out;
-        }
-
-        .form-label-group input::-webkit-input-placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input:-ms-input-placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input::-ms-input-placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input::-moz-placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input::placeholder {
-            color: transparent;
-        }
-
-        .form-label-group input:not(:placeholder-shown) {
-            padding-top: 1.25rem;
-            padding-bottom: .25rem;
-        }
-
-        .form-label-group input:not(:placeholder-shown) ~ label {
-            padding-top: .25rem;
-            padding-bottom: .25rem;
-            font-size: 12px;
-            color: #777;
-        }
-
-        /* Fallback for Edge
-        -------------------------------------------------- */
-        @supports (-ms-ime-align: auto) {
-            .form-label-group > label {
-                display: none;
-            }
-            .form-label-group input::-ms-input-placeholder {
-                color: #777;
-            }
-        }
-
-        /* Fallback for IE
-        -------------------------------------------------- */
-        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-            .form-label-group > label {
-                display: none;
-            }
-            .form-label-group input:-ms-input-placeholder {
-                color: #777;
-            }
-        }
-    </style>
+    <link rel="icon" sizes="96x96" href="/static/favicon-96x96.png">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/sign.css">
 </head>
 <body>
-    <form class="form-signup" method="post" target="/signup" id="signup-form" onsubmit="sendForm(); return false;">
+    <form class="form-sign" method="post" target="/signup" id="signup-form" onsubmit="sendForm(); return false;">
         <div class="text-center mb-4">
-            <img class="mb-4" src="http://lanxiongsports.com/ueditor/php/upload/image/20160306/1457234085233974.jpg" alt="" width="72" height="72">
+            <img class="mb-4" src="/static/logo.png" alt="" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Kapmon</h1>
             <p></p>
         </div>
@@ -132,6 +30,8 @@
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+        <a href="/signin" class="mt-2">Sign in</a>
+
         <p class="mt-5 mb-3 text-muted text-center">&copy; Sinketsu@</p>
     </form>
 
