--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,9 @@
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark">Login: {{.Login}}</a>
         </nav>
-        <a class="btn btn-outline-primary" href="/logout">Logout</a>
+        <form class="form-inline" action="/logout" method="post">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Logout</button>
+        </form>
     </div>
 
     <div class="container-fluid">
