--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark">Login: {{.Login}}</a>
         </nav>
+        <span class="badge badge-primary mx-2">{{.Role}}</span>
         <form class="form-inline" action="/logout" method="post">
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Logout</button>
         </form>
@@ -27,6 +28,8 @@
                     <a class="list-group-item list-group-item-action" id="list-memory-list" data-toggle="list" href="#list-memory" role="tab">Memory (in Mb)</a>
                     <a class="list-group-item list-group-item-action" id="list-la5-list" data-toggle="list" href="#list-la5" role="tab">Load average 5m</a>
                 </div>
+
+                <a class="btn btn-primary my-3" href="/download" id="linkDownload" hidden>Download</a>
             </div>
             <div class="col-8">
                 <div class="tab-content" id="nav-tabContent">
@@ -34,10 +37,10 @@
                         <div class="ct-chart" id="cpu"></div>
                     </div>
                     <div class="tab-pane fade" id="list-memory" role="tabpanel">
-                        <div class="ct-chart" id="memory"></div>
+                        <div class="ct-chart" id="memory"><p id="p_memory">Sorry, you have no permissions</p></div>
                     </div>
                     <div class="tab-pane fade" id="list-la5" role="tabpanel">
-                        <div class="ct-chart" id="la5"></div>
+                        <div class="ct-chart" id="la5"><p id="p_la5">Sorry, you have no permissions</p></div>
                     </div>
                 </div>
             </div>
@@ -50,22 +53,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script>
-        var la5 = new Chartist.Line('#la5', {
-            labels: [{{range (index .Data 2)}} {{.Timestamp.Format "15:04:05"}}, {{end}}],
-            series: [
-                [{{range (index .Data 2)}} {{.Value}}, {{end}}]
-            ]
-        }, {
-            low: 0,
-            showArea: true,
-            height: 400,
-            axisX: {
-                labelInterpolationFnc: function skipLabels(value, index) {
-                    return index % 5  === 0 ? value : null;
-                }
-            }
-        });
-
         var cpu = new Chartist.Line('#cpu', {
             labels: [{{range (index .Data 0)}} {{.Timestamp.Format "15:04:05"}}, {{end}}],
             series: [
@@ -82,6 +69,27 @@
             }
         });
 
+        {{if eq .Role "admin"}}
+        $('#linkDownload').prop("hidden", false);
+
+        $('#p_la5').prop("hidden", true);
+        var la5 = new Chartist.Line('#la5', {
+            labels: [{{range (index .Data 2)}} {{.Timestamp.Format "15:04:05"}}, {{end}}],
+            series: [
+                [{{range (index .Data 2)}} {{.Value}}, {{end}}]
+            ]
+        }, {
+            low: 0,
+            showArea: true,
+            height: 400,
+            axisX: {
+                labelInterpolationFnc: function skipLabels(value, index) {
+                    return index % 5  === 0 ? value : null;
+                }
+            }
+        });
+
+        $('#p_memory').prop("hidden", true);
         var memory = Chartist.Line('#memory', {
             labels: [{{range (index .Data 1)}} {{.Timestamp.Format "15:04:05"}}, {{end}}],
             series: [
@@ -97,7 +105,7 @@
                 }
             }
         });
-
+        {{end}}
 
         $('#list-tab a').on('shown.bs.tab', function (e) {
             cpu.update();
