--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -16,22 +16,22 @@
             <p></p>
         </div>
 
-        <div class="form-label-group">
-            <input type="text" name="login" id="inputLogin" class="form-control" placeholder="" required>
-            <div class="invalid-feedback" id="invalidLogin" hidden>
-                Invalid login/password.
-            </div>
+        <div class="form-group">
             <label for="inputLogin">Login</label>
+            <small id="invalidLogin" class="text-danger" hidden>
+                User not found
+            </small>
+            <input type="text" name="login" class="form-control" id="inputLogin" placeholder="Login">
         </div>
 
-        <div class="form-label-group">
-            <input type="password" name="password" id="inputPassword" class="form-control" placeholder="" required>
+        <div class="form-group">
             <label for="inputPassword">Password</label>
+            <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-
         <a href="/signup" class="mt-2">Sign up</a>
+
         <p class="mt-5 mb-3 text-muted text-center">&copy; Sinketsu@</p>
     </form>
 
