change name of roles

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -19,8 +19,8 @@
         <div class="form-group">
             <label for="inputState">Role</label>
             <select id="inputState" class="form-control" name="role">
-                <option selected>student</option>
-                <option>admin</option>
+                <option selected>servant</option>
+                <option>master</option>
             </select>
         </div>
 
