fix clickhouse init script

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,7 @@
             }
         });
 
-        {{if eq .Role "admin"}}
+        {{if eq .Role "master"}}
         $('#linkDownload').prop("hidden", false);
 
         $('#p_la5').prop("hidden", true);
